# learn-rust-by-projects

./: Cargo.toml  README.md
build-your-own-git/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  run_tests.sh
build-your-own-git/.codecrafters/: compile.sh  run.sh
build-your-own-git/.test/: test_cat_file.sh  test_init.sh  test_ls_tree.sh
build-your-own-git/src/: commands.rs  main.rs  objects.rs
build-your-own-git/src/commands/: cat_file.rs  commit.rs  hash_object.rs  ls_tree.rs  write_tree.rs
