[package]
name = "own-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
clap = { version = "4.5.47", features = ["derive"] }
flate2 = "1.0.34"                                # compression
thiserror = "1.0.38"                             # error handling
sha1 = "0.10"
hex = "0.4" 
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3"  # 最新稳定版本
tempfile = "3.22.0"
